--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
     rel="stylesheet" 
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
-    <title>あなたのいいところ診断</title>
+    <title>あなたのいいところ診断ju-tsurumi</title>
   </head>
   <body class="bg-primary-subtle">
     <header>
