--- a/assessment.html
+++ b/assessment.html
@@ -21,6 +21,7 @@
     <div class="container pt-5">
       <h1>あなたのいいところは?</h1>
       <p>診断したい名前を入れて下さい</p>
+      <p>news</p>
       
       <div class="row">
         <div class="col-sm-9 col-lg-6">
